--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -49,7 +49,7 @@
         <h1>Stats</h1>
         <div class="section-items">
           <!--PizzaHub-->
-          <div class="section">
+          <div class="subsection">
             <h1>S123456</h1>
             <div class="section-items">
               <div class="statBox">
@@ -71,7 +71,7 @@
             </div>
           </div>
           <!--Customers-->
-          <div class="section">
+          <div class="subsection">
             <h1>Customers</h1>
             <div class="section-items">
               <div class="statBox">
@@ -96,6 +96,11 @@
       </div>
       <!--Stats End-->
      
+
+      <div class="section-items">
+        <div class="subsection">test</div>
+        <div class="subsection">test</div>
+      </div>
     <script>
       function toggleSidebar(turnOff = false) {
         if (turnOff) {
