--- a/src/frontend/styles/container.css
+++ b/src/frontend/styles/container.css
@@ -1,8 +1,8 @@
 .section,
 .box,
-.statBox {
+.statBox,
+.subsection {
   justify-content: space-between;
-  width: 100%;
   padding: 8px;
   box-shadow: 0px 4px 2px rgba(0, 0, 0, 0.3);
   border-color: #3a3a3a;
@@ -12,6 +12,10 @@
   margin: 3px;
   overflow: hidden;
   white-space: nowrap;
+}
+
+.subsection {
+  width: 100%;
 }
 
 .box,
