--- a/src/frontend/styles/main.css
+++ b/src/frontend/styles/main.css
@@ -34,6 +34,7 @@ p {
 body {
   background-color: #1b1b1b;
   margin: 0;
+  overflow: hidden;
 }
 
 /*Sidebar -------------------*/
@@ -101,9 +102,7 @@ button:hover, button:active {
 
 .main {
   justify-content: space-between;
-  display: flex;
   padding: 10px;
-  transition: margin-left 0.5s;
   transition: 0.3s;
   opacity: 1;
 }
@@ -136,13 +135,16 @@ button:hover, button:active {
 .btn,
 .infobox {
   flex: 1;
-  height: 28px;
-  padding: 0px 10px;
+  height: 24px;
+  padding: 0px 6px;
   align-items: center;
   text-align: center;
   border-radius: 5px;
   border-width: 0;
   margin: 2px;
+  font-size: 12px;
+  flex: 1;
+  justify-content: center;
 }
 
 .btnbox {
@@ -154,16 +156,17 @@ button:hover, button:active {
   border-radius: 5px;
   display: inline-flex;
   align-items: center;
-  width: 320px;
+  width: 240px;
   justify-content: space-evenly;
   margin: 3px;
+  display: flex;
 }
 
 .infobox, .infobox:hover {
   background: #252525;
 	color: #B3B3B3;
 	font-weight: 400;
-	font-size: 10px;
+	font-size: 8px;
   cursor: auto;
 }
 /*Button -------------------*/
@@ -222,7 +225,7 @@ button:hover, button:active {
   justify-content: center;
   align-items: center;
   margin: 9px;
-  background-color: white;
+  background-color: #b3b3b3;
   border-radius: 50%;
 }
 /*Company Name -------------------*/
