--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -49,7 +49,7 @@
         <h1>Stats</h1>
         <div class="section-items">
           <!--PizzaHub-->
-          <div class="section">
+          <div class="subsection">
             <h1>PizzaHub</h1>
             <div class="section-items">
               <div class="statBox">
@@ -71,7 +71,7 @@
             </div>
           </div>
           <!--Customers-->
-          <div class="section">
+          <div class="subsection">
             <h1>Customers</h1>
             <div class="section-items">
               <div class="statBox">
@@ -96,6 +96,24 @@
       </div>
       <!--Stats End-->
      
+      <div class="section">
+        <h1>Revenue</h1>
+        <div class="btnbox">
+          <button class="btn">STABLE</button>
+          <button class="btn">UNSTABLE</button>
+          <button class="btn">CUSTOM</button>
+        </div>
+        <div class="section-items">
+          <div class="subsection">test</div>
+          <div class="subsection">test</div>
+        </div>
+      </div>
+
+      <div class="section-items">
+        <div class="subsection">test</div>
+        <div class="subsection">test</div>
+        <div class="subsection">test</div>
+      </div>
     <script>
       function toggleSidebar(turnOff = false) {
         if (turnOff) {
