--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -97,11 +97,13 @@
       <!--Stats End-->
      
       <div class="section">
-        <h1>Revenue</h1>
-        <div class="btnbox">
-          <button class="btn">STABLE</button>
-          <button class="btn">UNSTABLE</button>
-          <button class="btn">CUSTOM</button>
+        <div class="section-items">
+          <div class="btnbox">
+            <button class="btn">STABLE</button>
+            <button class="btn">UNSTABLE</button>
+            <button class="btn">CUSTOM</button>
+          </div>
+          <h1 class="centered">Revenue</h1>
         </div>
         <div class="section-items">
           <div class="subsection">test</div>
