--- a/src/frontend/views/company.html
+++ b/src/frontend/views/company.html
@@ -19,6 +19,7 @@ und die nicht angeklickten grau sein (aktuell andersrum)-->
   
   <script src="/static/echarts/echarts.js"></script>
   <script src="/static/charts/franchiseCharts.js" type="text/javascript"></script>
+  <script src="/static/echarts/infographic.js"></script>
   
   <script type="text/javascript" src="/static/echarts/echarts.min.js"></script>
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
@@ -190,7 +191,8 @@ und die nicht angeklickten grau sein (aktuell andersrum)-->
     }
 });
     </script>
-  <script>
+  <script>  
+    //var chart = echarts.init(dom, 'infographic')
     
     bestButton();
     worstButton();
