--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -106,7 +106,9 @@
           <h1 class="centered">Revenue</h1>
         </div>
         <div class="section-items">
-          <div class="subsection">test</div>
+          <div class="subsection">
+            <div id="revenue"></div> 
+          </div>
           <div class="subsection">test</div>
         </div>
       </div>
@@ -125,7 +127,8 @@
         document.getElementById("sidebar").classList.toggle("active");
         document.getElementById("main").classList.toggle("active");
       }
-      }
+      revenue();
+        }
     </script>
   </body>
 </html>
