fixed mainpage bug and implemented structure of Popularity over time

--- a/src/frontend/views/company.html
+++ b/src/frontend/views/company.html
@@ -120,9 +120,9 @@ und die nicht angeklickten grau sein (aktuell andersrum)-->
 </div>
 
 <div id="sector3Container">
-  <div id="placeholder">
-    <div class="placeholderContainer">
-        <h2 class="placeholderTitle" data-tooltip="This is the first placeholder section">Placeholder</h2>
+  <div id="pizzaPopularity", style="height: 650px";>
+    <div class="pizzaPopularity2">
+        <h2 class="pizzaPopularityH" data-tooltip="This is the first placeholder section">Pizza Popularity</h2>
     </div>
 
     <div class="placeholderContainer">
@@ -213,7 +213,8 @@ und die nicht angeklickten grau sein (aktuell andersrum)-->
     avCustomer();
     sideBar();
     storeLocationMap();
-    pizzaRanking();
+    //pizzaRanking();
+    pizzaPopularity();
     // Function to display the data in organized boxes
     
   </script>
