--- a/src/frontend/styles/main.css
+++ b/src/frontend/styles/main.css
@@ -234,6 +234,8 @@ button:active {
   border-radius: 50%;
 }
 /*Company Name -------------------*/
+/*charts*/
+
 
 .centered {
   transform: translateX(-50%);
