--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -107,7 +107,8 @@
         </div>
         <div class="section-items">
           <div class="subsection">
-            <div id="revenue"></div> 
+            <div id="revenue" class="">
+          </div> 
           </div>
           <div class="subsection">test</div>
         </div>
@@ -126,9 +127,11 @@
         } else {
         document.getElementById("sidebar").classList.toggle("active");
         document.getElementById("main").classList.toggle("active");
-      }
-      revenue();
+      }      
         }
+    </script>
+    <script>
+      revenue();
     </script>
   </body>
 </html>
