Map now looks a bit better

--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -117,9 +117,11 @@
         </div>
       </div>
 
-      <div class="section-items">
-        <div id="map" style="height: 600; width: 100%;">/div>
-      </div>
+      <div id="mapContainer">
+        <h2 data-tooltip="This is the a Map showing all Stores">All Stores in the US</h2>
+      <div id="map" style="height: 600; width: 100%;">  
+      </div>  
+    </div>
       
       
       
