--- a/src/frontend/styles/container.css
+++ b/src/frontend/styles/container.css
@@ -35,3 +35,19 @@
   background-color: #3a3a3a;
   box-shadow: none;
 }
+#map {
+  width: 600px;
+  height: 500px;
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+#mapContainer {
+  margin-top: 20px;
+  border: 2px solid #3a3a3a;
+  border-radius: 10px;
+  padding: 10px;
+  width: 100%;
+  box-sizing: border-box;
+}
