feat: Add dailyOrders chart to individual store page

--- a/src/frontend/views/individualStore.html
+++ b/src/frontend/views/individualStore.html
@@ -116,7 +116,7 @@
 
 <div id="dailyOrdersContainer">
   <h1 data-tooltip="dailyOrders">Forecast Orders</h1>
-  <div id="pizza_price_popularity" style="width: 600px; height: 600px"></div>
+  <div id="dailyOrders" style="width: 600px; height: 600px"></div>
 </div>
  <!--
   <div id="Heatmap" style="width: 900px; height: 600px">
