--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -5,14 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="/style/main.css" />
     <link rel="stylesheet" type="text/css" href="/style/container.css" />
+    <link rel="stylesheet" type="text/css" href="/style/diagram.css" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
     />
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap"
     />
+    <script src="/static/echarts/echarts.js"></script>
+    <script src="/static/charts/charts.js" type="text/javascript"></script>
+    
 
     <title>Document</title>
   </head>
@@ -45,12 +50,14 @@
     <div id="main" class="main" onclick="toggleSidebar(true)">
       <!-- Put content here -->
       <!--Stats-->
+      <div class="section-items">
+
       <div class="section">
         <h1>Stats</h1>
         <div class="section-items">
           <!--PizzaHub-->
           <div class="subsection">
-            <h1>S123456</h1>
+            <h1>PizzaHub</h1>
             <div class="section-items">
               <div class="statBox">
                 <h2>Sales<h2>
@@ -94,13 +101,17 @@
           </div>
         </div>
       </div>
+    </div>
       <!--Stats End-->
-     
-
-      <div class="section-items">
-        <div class="subsection">test</div>
-        <div class="subsection">test</div>
+    <div class="section-items">
+      <div class="subsection">
+        <div id="revenue"></div>
+      </div> 
+      <div class="subsection">
+        <div id="totalRevenue"></div>
       </div>
+    </div>
+      
     <script>
       function toggleSidebar(turnOff = false) {
         if (turnOff) {
@@ -109,8 +120,8 @@
         } else {
         document.getElementById("sidebar").classList.toggle("active");
         document.getElementById("main").classList.toggle("active");
-      }
-      }
+      }      
+        }
     </script>
   </body>
 </html>
