Improve scroll behaviour

--- a/src/frontend/styles/diagram.css
+++ b/src/frontend/styles/diagram.css
@@ -3,7 +3,10 @@
     height: 250px;
   }
   
-  #revenue {
-    height: 300px;
-  }
+#revenue {
+  height: 300px;
+}
   
+  .diagram {
+    height: 100px;
+  }
