--- a/src/frontend/styles/main.css
+++ b/src/frontend/styles/main.css
@@ -34,7 +34,10 @@ p {
 body {
   background-color: #1b1b1b;
   margin: 0;
-  overflow: hidden;
+}
+
+body::-webkit-scrollbar {
+  width: 0px;
 }
 
 /*Sidebar -------------------*/
@@ -83,7 +86,7 @@ button:active {
 }
 
 .openbtn {
-  position: absolute;
+  position: fixed;
   font-size: 20px;
   padding: 10px 15px;
   height: 56px;
@@ -104,20 +107,25 @@ button:active {
 
 .main {
   justify-content: space-between;
-  padding: 10px;
+  padding: 4px;
   transition: 0.3s;
   opacity: 1;
+  scrollbar-width: 0px;
 }
 
 .main.active {
   opacity: 0.5;
   transition: 0.3s;
 }
+
+#content {
+  margin-top: 59px;
+}
 /*Sidebar -------------------*/
 
 /*Topbar -------------------*/
 #topbar {
-  position: relative;
+  position: fixed;
   width: 100%;
   height: 56px;
   background-color: #252525;
@@ -177,7 +185,7 @@ button:active {
 /*Company Name -------------------*/
 #companyname,
 #user {
-  position: absolute;
+  position: fixed;
   left: 60px;
   z-index: 9999;
   padding: 12px 15px;
@@ -186,7 +194,6 @@ button:active {
 }
 
 #user {
-  position: absolute;
   left: auto;
   right: 60px;
   top: 0;
@@ -221,7 +228,7 @@ button:active {
 }
 
 #icon {
-  position: absolute;
+  position: fixed;
   left: auto;
   right: 0px;
   z-index: 9999;
@@ -242,3 +249,4 @@ button:active {
   position: absolute;
   left: 50%;
 }
+
