Map titel overlap the map

--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -130,7 +130,7 @@
           <div class="subsection">test3</div>
           <div class="subsection">test4</div>
           <div class="subsection">
-            <h2 data-tooltip="This is the a Map showing all Stores">All Stores in the US</h2>
+            <h2 data-tooltip="This is the a Map showing all Stores" id="mapTitel">Store locations</h2>
             <div id="map" class="diagram"></div>  
           </div>
         </div>
