--- a/src/frontend/styles/container.css
+++ b/src/frontend/styles/container.css
@@ -2,6 +2,7 @@
 .box,
 .statBox,
 .subsection {
+  position: relative;
   justify-content: space-between;
   padding: 8px;
   box-shadow: 0px 4px 2px rgba(0, 0, 0, 0.3);
