--- a/src/frontend/styles/diagram.css
+++ b/src/frontend/styles/diagram.css
@@ -1,12 +1,24 @@
 #map {
     border-radius: 4px;
     height: 250px;
-  }
-  
-#revenue {
-  height: 300px;
 }
-  
-  .diagram {
+
+#revenue {
+    height: 300px;
+}
+
+.diagram {
     height: 100px;
-  }
+}
+
+#mapTitel {
+    position: absolute;
+    bottom: 6px;
+    left: 6px;
+    padding: 5px;
+    top: auto;
+    color: black;
+    z-index: 999;
+    background-color: white;
+    border-radius: 4px;
+}
