--- a/src/frontend/styles/diagram.css
+++ b/src/frontend/styles/diagram.css
@@ -17,8 +17,7 @@
     left: 6px;
     padding: 5px;
     top: auto;
-    color: black;
     z-index: 999;
-    background-color: white;
-    border-radius: 4px;
+    background-color: #1b1b1b;
+    border-top-right-radius: 4px;
 }
