--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -151,7 +151,7 @@
         }
     </script>
     <script>
-      const map = L.map('map').setView([37.7749, -122.4194], 5);
+      const map = L.map('map', {attributionControl: false}).setView([39, -120], 5);
       storeLocationMap();
     </script>
   </body>
