--- a/src/frontend/styles/container.css
+++ b/src/frontend/styles/container.css
@@ -35,3 +35,15 @@
   background-color: #3a3a3a;
   box-shadow: none;
 }
+
+#revenue {
+  width: auto;
+  display: flex;
+}
+
+#revenueContainer {
+  margin-top: 20px;
+  border: 2px solid #3a3a3a;
+  border-radius: 10px;
+  padding: 10px;
+}
