--- a/src/frontend/styles/container.css
+++ b/src/frontend/styles/container.css
@@ -46,4 +46,12 @@
   border: 2px solid #3a3a3a;
   border-radius: 10px;
   padding: 10px;
+  box-sizing: border-box;
+}
+
+#statsOverview {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  flex-wrap: wrap;
 }
