--- a/src/frontend/styles/diagram.css
+++ b/src/frontend/styles/diagram.css
@@ -21,3 +21,23 @@
     background-color: #1b1b1b;
     border-top-right-radius: 4px;
 }
+
+#revenue {
+    width: auto;
+    display: flex;
+  }
+  
+  #revenueContainer {
+    margin-top: 20px;
+    border: 2px solid #3a3a3a;
+    border-radius: 10px;
+    padding: 10px;
+    box-sizing: border-box;
+  }
+  
+  #statsOverview {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    flex-wrap: wrap;
+  }
