chore: Update script imports and fix chart display issues fix compile error

--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -13,9 +13,9 @@
 
     <script src="/static/echarts/echarts.js"></script>
     <script src="/static/charts/charts.js" type="text/javascript"></script>
-    <script src="/src/frontend/public/charts/charts.ts" type="module"></script>
-    <script src="/src/frontend/public/charts/storeCharts.ts" type="module"></script>
-    <script src="/src/frontend/public/UI/ui.ts" type="module"></script>
+
+    <script src="/static/charts/storeCharts.js" type="module"></script>
+    <script src="/static/UI/ui.js" type="module"></script>
 
     <script type="text/javascript" src="/static/echarts/echarts.min.js"></script>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
