--- a/src/frontend/styles/individualStyle.css
+++ b/src/frontend/styles/individualStyle.css
@@ -9,7 +9,6 @@ body {
 #PizzaSize {
   width: 100%;
   height: 100%;
-  outline: 4px solid rgb(116, 116, 116);
 }
 
 #statsOverviewContainer {
@@ -29,7 +28,6 @@ body {
   width: 48%;
 }
 
-
 #dashboard {
   display: flex;
   justify-content: space-between;
@@ -44,8 +42,6 @@ body {
   border-bottom: 2px solid #c0c0c0;
   padding-bottom: 5px;
 }
-
-
 
 #statsOverview {
   display: flex;
@@ -81,18 +77,30 @@ body {
   font-size: 14px;
 }
 
-#qualityContainer{
+.section {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  width: 100%;
+  height: 600px;
+  box-sizing: border-box;
+}
+ 
+.s2Container {
   margin-top: 20px;
     border: 2px solid #c0c0c0;
     border-radius: 10px;
     padding: 10px;
-}
+    justify-content: center; /* Zentriert horizontal */
+    align-items: center;     /* Zentriert vertikal */
+  }
 
 #quality {
   display: flex;
   justify-content: space-between;
   gap: 10px;
   flex-wrap: wrap;
+  
 }
 
 #qualityTitle {
@@ -102,8 +110,6 @@ body {
   border-bottom: 2px solid #ffffff;
   padding-bottom: 5px;
 }
-
-
 
 #Store-revenue {
   display: flex;
@@ -166,6 +172,7 @@ body {
   border-bottom: 2px solid #ffffff;
   padding-bottom: 5px;
 }
+
 #statsOverviewContainer 
 #Store-revenueContainer 
 #abcContainer
